
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2025 MAR 11a
  * in cycle/share/cycle_share.c
    - added flux to the parameters given to find_linearization_coefficients_inner_node_emfield()
  * in cycle/share/tsemf_share.c
    - added flux to the parameters given to find_linearization_coefficients_inner_node_emfield()
  * in model/_model.h
    - added flux to the parameters given to find_linearization_coefficients_inner_node_emfield()
  * in model/emfield/_Epotential-B/emfield.c
    - various fixes
  * in model/emfield/_Epotential*/emfield.c
    - added flux to the parameters given to find_linearization_coefficients_inner_node_emfield()
  * in src/common.h
    - in npbs_t, renamed Bfixed to Bapplied
    

2025 MAR 04a
  * in model/chem/_NH3_Plasma_32s/chem.c
    - added rodriguez2024v3.c
  * in model/chem/_NH3_Plasma_32s/
    - added rodriguez2024v3.c and rodriguez2024v3.h


2025 MAR 03c
  * in model/chem/_NH3_Plasma_32s/rodriguez2024v2.c
    - updated the reaction rates for reactions 2 and 3
    

2025 MAR 03b
  * in model/share/transport_share.c
    - updated mueN for NH3 and NH3v
  * in model/thermo/_generic/electronimpact.c
    - updated _EoverN_from_Te_NH3_Morgan(), _Te_from_EoverN_NH3_Morgan()
      _EoverN_from_Te_NH3v_Morgan(), _Te_from_EoverN_NH3v_Morgan()
  * in model/thermo/doc/electronimpact.tex
    - improved the documentation for NH3 and NH3v
  * in model/transport/doc/report.tex
    - improved the documentation for NH3 and NH3v
    

2025 MAR 03a
  * in model/emfield/
    - deleted _Epotential-Bfixed_old
  * in model/emfield/doc/Electrodynamics/report.tex
    - improved the induced magnetic field section
  * in model/emfield/
    - added _Epotential-B/
  * in src/common.h