@@ -1448,236 +1448,3 @@ double _Te_from_rhok_EoverN(spec_t rhok, double EoverN){
   return(Te);
 }
 
-/* find the product of inelastic forward (k_kl) and backward (kb_lk) rate coefficients and the activation energy
- * for the kth N2vib species process
- * sum_l (k_kl*e_kl-kb_lk*e_lk) (cooling-heating from N2vib)
- * k_kl, kb_lk in m^3/s 
- * e_kl, e_lk in Joule */
-static double _ke_kl_N2vib_from_Te(long k, double Te) {
-  double ke_kl, Te_data[18], ke_kl_data[18]; 
-  switch (k){
-    case 1: 
-      /* Te */
-      Te_data[0] =  453.272746740602;
-      Te_data[1] =  473.580665501381;
-      Te_data[2] =  596.356540066552;
-      Te_data[3] =  4862.29597758096;
-      Te_data[4] =  5738.43761554602;
-      Te_data[5] =  7619.53111904452;
-      Te_data[6] =  8503.79592451390;
-      Te_data[7] =  9294.06407743338;
-      Te_data[8] =  9967.12652779065;
-      Te_data[9] =  10521.8228230851;
-      Te_data[10] = 10974.3992983253;
-      Te_data[11] = 11343.4231935212;
-      Te_data[12] = 11650.9431061844;
-      Te_data[13] = 11941.0562313384;
-      Te_data[14] = 12242.7738814986;
-      Te_data[15] = 12637.3277317080;
-      Te_data[16] = 35486.6374688367;
-      Te_data[17] = 1197586.98063569;
-      /* sum_l(k_kl*e_kl) */
-      ke_kl_data[0] =  -4.86461141332565e-37;
-      ke_kl_data[1] =  -4.98076150641229e-37;
-      ke_kl_data[2] =  -5.62650495914362e-37;
-      ke_kl_data[3] =  -2.58460927072883e-36;
-      ke_kl_data[4] =  -4.08617385980396e-36;
-      ke_kl_data[5] =  -1.77669135435666e-35;
-      ke_kl_data[6] =  -3.57521370061139e-35;
-      ke_kl_data[7] =  -6.21847794084093e-35;
-      ke_kl_data[8] =  -9.35956239883247e-35;
-      ke_kl_data[9] =  -1.24349282734422e-34;
-      ke_kl_data[10] = -1.48591106317528e-34;
-      ke_kl_data[11] = -1.60954750818161e-34;
-      ke_kl_data[12] = -1.56609433563079e-34;
-      ke_kl_data[13] = -1.28275280384589e-34;
-      ke_kl_data[14] = -6.87187613624587e-35;
-      ke_kl_data[15] = 3.23439899198144e-35;
-      ke_kl_data[16] = 1.68484532258868e-33;
-      ke_kl_data[17] = 4.31279830067789e-31;
-      
-    break; 
-    case 2: 
-      Te_data[0] =  453.272746740602;
-      Te_data[1] =  473.580665501381;
-      Te_data[2] =  1934.47431852684;
-      Te_data[3] =  3495.28293185533;
-      Te_data[4] =  4862.29597758096;
-      Te_data[5] =  7619.53111904452;
-      Te_data[6] =  10521.8228230851;
-      Te_data[7] =  10974.3992983253;
-      Te_data[8] =  11343.4231935212;
-      Te_data[9] =  11650.9431061844;
-      Te_data[10] = 11941.0562313384;
-      Te_data[11] = 12242.7738814986;
-      Te_data[12] = 12637.3277317080;
-      Te_data[13] = 13507.6671071700;
-      Te_data[14] = 35486.6374688367;
-      Te_data[15] = 65147.8033845811;
-      Te_data[16] = 109430.670808087;
-      Te_data[17] = 1197586.98063569;
-
-      ke_kl_data[0] =  -1.10653242948939e-36;
-      ke_kl_data[1] =  -1.10294257457745e-36;
-      ke_kl_data[2] =  -1.02980937403351e-36;
-      ke_kl_data[3] =  -4.63133093282915e-37;
-      ke_kl_data[4] =  -7.54768176632938e-36;
-      ke_kl_data[5] =  -1.83350178450952e-34;
-      ke_kl_data[6] =  -7.04624018719801e-34;
-      ke_kl_data[7] =  -7.76006029801873e-34;
-      ke_kl_data[8] =  -8.10109636194007e-34;
-      ke_kl_data[9] =  -8.05710184933610e-34;
-      ke_kl_data[10] = -7.55639548470422e-34;
-      ke_kl_data[11] = -6.54153496369912e-34;
-      ke_kl_data[12] = -4.92896219361738e-34;
-      ke_kl_data[13] = -2.50489376395735e-34;
-      ke_kl_data[14] = 1.72083057828894e-33;
-      ke_kl_data[15] = 4.76338443560920e-33;
-      ke_kl_data[16] = 1.34402593410068e-32;
-      ke_kl_data[17] = 2.43444371922711e-31;
-    break;
-    case 3: 
-      Te_data[0] =  453.272746740602;
-      Te_data[1] =  1298.54634818928;
-      Te_data[2] =  2128.26988612971;
-      Te_data[3] =  2360.36038625290;
-      Te_data[4] =  3495.28293185533;
-      Te_data[5] =  7619.53111904452;
-      Te_data[6] =  10521.8228230851;
-      Te_data[7] =  10974.3992983253;
-      Te_data[8] =  11343.4231935212;
-      Te_data[9] =  11650.9431061844;
-      Te_data[10] = 11941.0562313384;
-      Te_data[11] = 12242.7738814986;
-      Te_data[12] = 12637.3277317080;
-      Te_data[13] = 13507.6671071700;
-      Te_data[14] = 35486.6374688367;
-      Te_data[15] = 65147.8033845811;
-      Te_data[16] = 109430.670808087;
-      Te_data[17] = 1197586.98063569;
-
-      ke_kl_data[0] =  -1.68278653054403e-36;
-      ke_kl_data[1] =  -1.65044105671289e-36;
-      ke_kl_data[2] =  -1.56643993273029e-36;
-      ke_kl_data[3] =  -1.60969525581726e-36;
-      ke_kl_data[4] =  -2.94991660167004e-35;
-      ke_kl_data[5] =  -6.72518362456381e-34;
-      ke_kl_data[6] =  -1.33258150798402e-33;
-      ke_kl_data[7] =  -1.40745510060680e-33;
-      ke_kl_data[8] =  -1.44925135354570e-33;
-      ke_kl_data[9] =  -1.46253925528182e-33;
-      ke_kl_data[10] = -1.44540570280778e-33;
-      ke_kl_data[11] = -1.39919319753893e-33;
-      ke_kl_data[12] = -1.31990910366153e-33;
-      ke_kl_data[13] = -1.18174926099218e-33;
-      ke_kl_data[14] = 7.05827881918222e-34;
-      ke_kl_data[15] = 4.48475700124146e-33;
-      ke_kl_data[16] = 1.94971739876087e-32;
-      ke_kl_data[17] = 4.31346415830453e-31;
-    break;
-    case 4: 
-      Te_data[0] =  453.272746740602;
-      Te_data[1] =  1298.54634818928;
-      Te_data[2] =  1934.47431852684;
-      Te_data[3] =  2360.36038625290;
-      Te_data[4] =  2649.31305890628;
-      Te_data[5] =  3018.33695410216;
-      Te_data[6] =  4106.84139967995;
-      Te_data[7] =  7619.53111904452;
-      Te_data[8] =  10521.8228230851;
-      Te_data[9] =  10974.3992983253;
-      Te_data[10] = 11343.4231935212;
-      Te_data[11] = 11650.9431061844;
-      Te_data[12] = 11941.0562313384;
-      Te_data[13] = 12242.7738814986;
-      Te_data[14] = 35486.6374688367;
-      Te_data[15] = 65147.8033845811;
-      Te_data[16] = 277000.011897034;
-      Te_data[17] = 1197586.98063569;
-
-      ke_kl_data[0] =  -2.12654432143955e-36;
-      ke_kl_data[1] =  -2.18383001001386e-36;
-      ke_kl_data[2] =  -2.14228039882260e-36;
-      ke_kl_data[3] =  -3.00322794069594e-36;
-      ke_kl_data[4] =  -8.50800916541815e-36;
-      ke_kl_data[5] =  -3.18756477239895e-35;
-      ke_kl_data[6] =  -2.21107736817862e-34;
-      ke_kl_data[7] =  -1.20373906470899e-33;
-      ke_kl_data[8] =  -1.81584873736952e-33;
-      ke_kl_data[9] =  -1.86680100416046e-33;
-      ke_kl_data[10] = -1.89187380191707e-33;
-      ke_kl_data[11] = -1.89657365601657e-33;
-      ke_kl_data[12] = -1.88089517101316e-33;
-      ke_kl_data[13] = -1.84648776600282e-33;
-      ke_kl_data[14] = 3.85746110640400e-34;
-      ke_kl_data[15] = 4.31308646976946e-33;
-      ke_kl_data[16] = 1.30380992218666e-31;
-      ke_kl_data[17] = 4.31341164687227e-31;
-    break;
-    default:
-      fatal_error("kth N2vib process level in _ke_kl_from_Te() set to invalid value.");
-  }
-  int N = sizeof(Te_data)/sizeof(Te_data[0]);
-  Te = ( min( Te_data[N-1], max( Te , Te_data[0] ) ) );
-  ke_kl = EXM_f_from_monotonespline(N, Te_data, ke_kl_data, Te); 
-  return(ke_kl);
-}
-
-/* find the fraction fk of vibrationally excited N2 level k wrt total N2 (ground state + vib. excited states)
- * assuming a Boltzmann distribution in Tv
- * energy e_k in eV for the transition from ground state to vib. level k */
-double _fk_N2vib_from_Tv(long k, double Tv) {
-  long l,nvib;
-  double Zvib,fk;
-  static const double e_k[] = {0.288, 0.572, 0.855, 1.133,1.4082,
-  1.6794, 1.9470, 2.2111, 2.4717, 2.7287,
-  2.9821, 3.2320, 3.4782, 3.7208, 3.9598,
-  4.1951, 4.4268, 4.6547, 4.8789, 5.0993}; // eV
-  nvib = 4;
-  if (k < 1 || k > nvib) fatal_error("Invalid vibrational energy level in _fk_from_Tv().");
-  // find partition function to ensure fractions add up to unity
-  Zvib=0.0;
-  for (l=1; l<=nvib; l++) Zvib+=exp(-fabs(_C(speceminus))*e_k[l-1]/(kB*Tv));
-  Zvib+=1.0;
-  // find fraction of vib. excited N2 state k
-  fk=exp(-fabs(_C(speceminus))*e_k[k-1]/(kB*Tv))/Zvib;
-  return(fk);
-}
-
-/* find Qe from excitation and de-excitation of vibrational N2 levels by electron impact
- * and include Qe from ground state N2VO = N2*(1-sum_fk)*/
-double _QeN2vib_from_rhok_T_Tv_Te(gl_t *gl, spec_t rhok, double T, double Tv, double Te){
-  long nvib,viblevel,sum;
-  double Qe,Tref;
-  nvib=4;
-  Tref=300.0e0; //gas temperature at which the experiments or BOLSIG+ results of mueN and E/N were obtained
-  Qe=0.0;
-  sum=0.0;
-  for (viblevel=1; viblevel<=nvib; viblevel++) sum+=_fk_N2vib_from_Tv(viblevel,Tv);
-  assert(sum<1.0e0);
-  // electron cooling-heating source term from N2 vibrational levels
-  for (viblevel=1; viblevel<=nvib; viblevel++) Qe+=rhok[speceminus]/_m(speceminus)*rhok[specN2]/_m(specN2)*_fk_N2vib_from_Tv(viblevel,Tv)*_ke_kl_N2vib_from_Te(viblevel,Te);
-  // electron cooling-heating source term from N2 in ground state
-  Qe+=rhok[speceminus]/_m(speceminus)*rhok[specN2]/_m(specN2)*fabs(_C(speceminus))*_mueNk_from_Te(gl,specN2,Te)*max(sqr(_EoverNk_from_Te(specN2, Te))-3.0*kB*max(0.0,Te-Tref)/(_m(specN2)*sqr(_mueNk_from_Te(gl,specN2,Te))),0.0)*(1.0-sum);
-  Qe+=3.0*kB*fabs(_C(speceminus))*(Te-T)*rhok[speceminus]*rhok[specN2]/(_m(speceminus)*sqr(_m(specN2))*_mueNk_from_Te(gl,specN2,Te))*(1.0-sum);
-  return(Qe);
-}
-
-/* find derivatives of Qe from excitation and de-excitation of vibrational N2 levels by electron impact
- * and include the derivatives of Qe from ground state N2VO = N2*(1-sum_fk)*/
-void find_dQeN2vib_from_rhok_T_Tv_Te(gl_t *gl, spec_t rhok, double T, double Tv, double Te, spec_t dQeN2vibdrhok, double *dQeN2vibdT, double *dQeN2vibdTv, double *dQeN2vibdTe){
-  long spec,viblevel,nvib;
-  double dTv,dTe,sum;
-  dTe=10.0;
-  dTv=dTe;
-  nvib=4;
-  sum=0.0;
-  for (viblevel=1; viblevel<=nvib; viblevel++) sum+=_fk_N2vib_from_Tv(viblevel,Tv);
-  for (spec=0; spec<ns; spec++){
-    if (spec==specN2 || spec==speceminus) dQeN2vibdrhok[spec] = _QeN2vib_from_rhok_T_Tv_Te(gl,rhok,T,Tv,Te)/rhok[spec];
-    else dQeN2vibdrhok[spec]=0.0;
-  }
-  *dQeN2vibdT=3.0*kB*fabs(_C(speceminus))*rhok[speceminus]*rhok[specN2]/(_m(speceminus)*sqr(_m(specN2))*_mueNk_from_Te(gl,specN2,Te))*(1.0-sum);
-  *dQeN2vibdTv=(_QeN2vib_from_rhok_T_Tv_Te(gl,rhok,T,Tv+dTv,Te)-_QeN2vib_from_rhok_T_Tv_Te(gl,rhok,T,Tv,Te))/dTv;
-  *dQeN2vibdTe=(_QeN2vib_from_rhok_T_Tv_Te(gl,rhok,T,Tv,Te+dTe)-_QeN2vib_from_rhok_T_Tv_Te(gl,rhok,T,Tv,Te))/dTe;
-}
