@@ -128,10 +128,5 @@ double _Te_from_rhok_EoverN(spec_t rhok, double EoverN);
 
 double _EoverNk_from_Te(long spec, double Te);
 
-double _fk_from_Tv(long k, double Tv);
-
-double _QeN2vib_from_rhok_T_Tv_Te(gl_t *gl, spec_t rhok, double T, double Tv, double Te);
-
-void find_dQeN2vib_from_rhok_T_Tv_Te(gl_t *gl, spec_t rhok, double T, double Tv, double Te, spec_t dQeN2vibdrhok, double *dQeN2vibdT, double *dQeN2vibdTv, double *dQeN2vibdTe);
 
 #endif /* _THERMO_H */
